[pull] adds roboto font to styles.css

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,16 @@ body,
 html,
 .container-fluid {
 	height: 100%;
+  font-family: 'Roboto' !important;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto';
+}
+p, div {
+  font-family: 'Roboto';
+}
+
 
 #app {
 	height: 100%;
