--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,15 +17,75 @@ p, div {
 	height: 100%;
 }
 
-.landing-div, .signin-div, .signup-div {
-	height: 100%;
-	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+.animation-container {
+  height: 100%;
+  width: 100%;
+}
+
+.example-appear {
+  opacity: 0;
+  transform: translate(-250px, 0);
+  transform: translate3d(-250px, 0, 0);
+}
+
+.example-appear.example-appear-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transform: translate3d(0, 0, 0);
+  transition-property: transform, opacity;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.175, 0.665, 0.32, 1), linear;
+}
+
+.example-enter {
+  opacity: 0;
+  transform: translate(-250px, 0);
+  transform: translate3d(-250px, 0, 0);
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transform: translate3d(0, 0, 0);
+  transition-property: transform, opacity;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.175, 0.665, 0.32, 1), linear;
+}
+
+.example-leave {
+  opacity: 1;
+  transform: translate(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  transition-property: transform, opacity;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.175, 0.665, 0.32, 1), linear;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0;
+  transform: translate(250px, 0);
+  transform: translate3d(250px, 0, 0);
+}
+
+.app-body {
+  height: 100%;
+  padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
   padding-bottom: 50px;
   text-align: center;
   color: #f8f8f8;
   background: url(../../assets/icebox-landing.jpg) no-repeat center center;
   background-size: cover;
 }
+
+/*.landing-div, .signin-div, .signup-div {
+	height: 100%;
+	padding-top: 50px;  
+  padding-bottom: 50px;
+  text-align: center;
+  color: #f8f8f8;
+  background: url(../../assets/icebox-landing.jpg) no-repeat center center;
+  background-size: cover;
+}*/
 
 .signin-form, .signup-form {
   /*background-color: #556270;*/
