--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -257,7 +257,52 @@ form .text-field-input div label {
 
 /* Landing Page Styling */
 
-.bar {
+.nav-link {
+  margin: 5px;
+}
+
+.nav-brand {
+  position: absolute;
+  left: 21%;
+}
+
+.banner-display {
+  color: white;
+  height: 750px;
+}
+
+.banner-text {
+  position: absolute;
+  width: 100%;
+  top: 350px;
+}
+
+.banner-title {
+  font-size: 100px;
+}
+
+.bar-description {
+  height: 1000px;
+  display: table-cell;
+}
+
+.spacer {
+  height: 200px;
+}
+
+.bar1-text {
+  width: 80%;
+}
+
+.bar2 {
+  position: relative;
+  background: #B4B4B4;
+  height: 650px;
+  color: white;
+  width: 100%;
+}
+
+/*.bar {
   width: 80%;
   height: 175px;
   padding: 10px;
@@ -315,9 +360,9 @@ form .text-field-input div label {
   position: absolute;
   float: left;
   /*background-color: green;*/
-}
+/*}*/
 
-#bar-second {
+/*#bar-second {
   height: 750px;
   background: transparent;
   width: 100%;
@@ -353,7 +398,7 @@ form .text-field-input div label {
   height: 200px;
   width: 200px;
   border-radius: 3px;
-}
+}*/
 
 .profile-name {
 
@@ -375,7 +420,7 @@ form .text-field-input div label {
 
 }
 
-#bar-fourth {
+/*#bar-fourth {
   background: #060F2F;
   height: 650px;
   width: 100%;
@@ -392,7 +437,7 @@ form .text-field-input div label {
   top: 0px;
   z-index: -10;
 }
-
+*/
 /* technologies used */
 
 .tech-container {
@@ -401,48 +446,60 @@ form .text-field-input div label {
 }
 
 #react {
-  height: 250px;
+  height: 150px;
   margin: -20px;
 }
 
-#node {
+#redux {
   height: 100px;
 }
 
+#node {
+  height: 90px;
+}
+
 #mysql {
-  height: 100px;
+  height: 60px;
+}
+
+#html5 {
+  height: 60px;
+}
+
+#css3 {
+  height: 65px;
 }
 
 .tech {
   height: 150px;
-  margin: 30px;
+  margin: 40px;
 }
 
 .landing-backdrop {
   position: relative;
   background: transparent;
-  /*background-repeat: repeat;*/
+  /*background-repeat: repeat;
 /*  background-size: contain;
   background-position: center;*/
-  width: 100%;
+/*  width: 100%;
   height: 100%;
   z-index: -5;
-}
+}*/
 
-.background-image {
+/*.background-image {*/
   /*position: fixed;*/
-  top;
+/*  top;
   background: url('../../assets/background.jpeg');
   background-repeat: repeat;
   background-position: center;
-  background-repeat: repeat;
+  background-repeat: repeat;*/
 /*  -webkit-filter: blur(5px);
   -moz-filter: blur(5px);
   -o-filter: blur(5px);
   -ms-filter: blur(5px);
   filter: blur(5px);*/
-  width: 100%;
+/*  width: 100%;
   height: 100%;
   z-index: -500;
-}
+}*/
 
