--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -195,8 +195,8 @@ form .text-field-input div label {
   }
 
   50% {
-    -webkit-transform: scale3d(1.10, 1.10, 1.10);
-    transform: scale3d(1.10, 1.10, 1.10);
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
   }
 
   to {
@@ -212,8 +212,8 @@ form .text-field-input div label {
   }
 
   50% {
-    -webkit-transform: scale3d(1.10, 1.10, 1.10);
-    transform: scale3d(1.10, 1.10, 1.10);
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
   }
 
   to {
@@ -225,6 +225,18 @@ form .text-field-input div label {
 .pulse {
   -webkit-animation-name: pulse;
   animation-name: pulse;
+}
+
+.start-speech-input {
+  animation-duration: 3s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+}
+
+.end-speech-input {
+  animation-duration: 1.5s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
 }
 
 .iceboxListItem {
