--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -83,8 +83,8 @@ p, div {
 /*  background: url(../../assets/background.jpeg) no-repeat center center;
   background-size: cover;*/
   background: #50a3a2;
-  background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+/*  background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);*/
 }
 
 .app-body {
@@ -100,9 +100,51 @@ p, div {
 }
 
 .appheader-navbar {
+  /*background: #50a3a2;*/
   background: #50a3a2;
   background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 0%);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.appheader-children-container {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
+
+.appheader-left-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex: 1;
+}
+
+.appheader-menu-button {
+	float: left;
+}
+.appheader-middle-container {
+	flex: 2;
+}
+.appheader-middle-container h1 {
+	font-size: 32;
+	color: white;
+}
+.appheader-right-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	flex: 1;
+}
+.appheader-right-buttons {
+	float: right;
 }
 
 .icebox-toolbar {
@@ -198,9 +240,12 @@ form .text-field-input div label {
 /*  background: #F1F1F1 no-repeat center center;
   background-size: cover;*/
   height: 100%;
-  background: #50a3a2;
+/*  background: #50a3a2;
   background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);*/
+  background: #53e3a6;
+  background: -webkit-linear-gradient(top left, #53e3a6 0%, #50a3a2 100%);
+  background: linear-gradient(to bottom right, #53e3a6 0%, #50a3a2 100%);
 }
 
 .icebox-list {
