--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -129,6 +129,18 @@ p, div {
 
 .appheader-menu-button {
 	float: left;
+/*	width: 64px;
+	height: 64px;
+	padding: 8px;*/
+}
+
+.appheader-menu-button-icon {
+/*	width: 64px;
+	height: 64px;
+	padding: 8px;*/
+/*	width: 48px;
+	height: 48px;
+	color: white;*/
 }
 .appheader-middle-container {
 	flex: 2;
