--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -88,12 +88,13 @@ p, div {
 }
 
 .app-body {
-	padding-top: 64px;
+	padding-top: 72px;
 }
 
 .appheader {
   /*position: -webkit-sticky;*/
   position: fixed;
+  height: 72px;
   width: 100%;
   top: 0;
   z-index: 1000;
@@ -108,6 +109,7 @@ p, div {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  height: 100%;
   width: 100%;
 }
 
@@ -252,12 +254,21 @@ form .text-field-input div label {
 /*  background: #F1F1F1 no-repeat center center;
   background-size: cover;*/
   height: 100%;
+  padding-bottom: 72px;
 /*  background: #50a3a2;
   background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);*/
   background: #53e3a6;
+  background: -webkit-linear-gradient(top left, #53e3a6 100%, #50a3a2 0%);
+  background: linear-gradient(to bottom right, #53e3a6 100%, #50a3a2 0%);
+}
+
+.icebox-list-container {
+/*	padding-bottom: 40px;
+  height: 100%;
+  background: #53e3a6;
   background: -webkit-linear-gradient(top left, #53e3a6 0%, #50a3a2 100%);
-  background: linear-gradient(to bottom right, #53e3a6 0%, #50a3a2 100%);
+  background: linear-gradient(to bottom right, #53e3a6 0%, #50a3a2 100%);*/
 }
 
 .icebox-list {
